--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,7 +7,7 @@
 }
 
 #mu-login {
-    background-image: url('../../assets/images/trianglifybg.jpg');
+    /* background-image: url('../../assets/images/trianglifybg-min.jpg'); */
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
@@ -49,12 +49,6 @@
     padding: 0 200px;
     margin-top: 50px;
 }
-
-
-/* * {
-    font-family: 'Raleway', sans-serif;
-    color: #FFF;
-} */
 
 div h2 span {
     color: #FFF;
@@ -139,7 +133,7 @@ h1 {
     color: #000000 !important;
     font-size: 12px;
     border: none;
-    //padding: 15px;
+    /* padding: 15px; */
     padding-left: 10px;
     border-bottom: 1px solid #CCC;
     margin-bottom: 10px;
@@ -190,7 +184,7 @@ h1 {
 }
 
 .login-margin {
-    //margin: 40px;
+    /* //margin: 40px; */
 }
 
 .login-padding-left {
@@ -225,7 +219,7 @@ h1 {
 .form-control {
     display: block;
     width: 100%;
-    //height: 34px;
+    /* //height: 34px; */
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
@@ -234,9 +228,9 @@ h1 {
     background-image: none;
     border: 1px solid #ccc;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
