--- a/src/app/app-navbar/app-navbar.component.css
+++ b/src/app/app-navbar/app-navbar.component.css
@@ -107,6 +107,27 @@ a.navbar-brand {
     transform: scale(1.2);
 }
 
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.center {
+    width: 40%;
+    height: 50%;
+    position: relatice;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.orange {
+    color: #f0ad4e
+}
+
 
 /*
 .arrow-down {
