--- a/src/assets/css/theme-color/jelly-bean-theme.css
+++ b/src/assets/css/theme-color/jelly-bean-theme.css
@@ -9,9 +9,9 @@ Author URI : http://www.markups.io/
 .mu-video-overlay {
     background-color: #2574A9;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #c762cb, #2574A9);
+    background: -webkit-linear-gradient(to right, #2574A9, #2574A9);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #c762cb, #2574A9);
+    background: linear-gradient(to right, #2574A9, #2574A9);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
